# Qwen3-TTS

./: README.md  pyproject.toml
examples/: test_model_12hz_base.py
qwen_tts/core/: rope_utils.py
qwen_tts/core/models/: configuration_qwen3_tts.py  modeling_qwen3_tts.py
qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen_tts/inference/: qwen3_tts_model.py
scripts/: install_flash_attn.py
